test/ts_features/4.7/Stricter-Checks-with-Template-String-Expressions/symbol.ts
/// <reference lib="es2015" />

let str = `hello ${Symbol()}`;
// TypeError: Cannot convert a Symbol value to a string
